# Veldos

./: .env  .gitignore  database.db  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1683878558337-4239b0d2c0d89.mjs
app/: globals.css  page.tsx
app/AnimeInfoPage/: page.tsx  style.css
app/AnimeInfoPage/AnimeInfoItem/: AnimeInfoItem.module.css  index.tsx
app/AnimeInfoPage/EpisodeBox/: EpisodeBox.module.css  index.tsx
app/Home/: Home.module.css  index.tsx
app/Home/AnimeBox/: AnimeBox.module.css  index.tsx
app/Home/View/: View.module.css  index.tsx
app/Search/: Search.module.css  page.tsx  style.css
app/Search/SearchItems/: SearchItems.module.css  index.tsx  style.css
app/WatchEpisode/: WatchEpisode.module.css  page.tsx
app/WatchEpisode/EpisodeView/: EpisodeView.module.css  index.tsx
components/functions/Database/: index.tsx
components/functions/DescriptionComponent/: DescriptionComponent.module.css  index.tsx
components/functions/Download/: index.tsx
components/functions/ImageComponent/: index.tsx  style.css
components/functions/ImageUpscaler/: index.tsx
components/functions/Navbar/: Navbar.module.css  index.tsx  style.css
components/view/Layout/: Layout.module.css  index.tsx  style.css
src/: .env  App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: animeheaven.rs  download.rs  gogoanime.rs  info.rs  main.rs  save.rs  search.rs
src/components/: searchResult.tsx
src/components/AnimeInfo/: index.tsx
src/components/DescriptionComponent/: index.tsx  style.css
src/components/ImageComponent/: index.tsx
src/components/Navbar/: index.tsx  style.css
src/components/Search/: index.tsx  style.css
src/pages/: InfoPage.css  InfoPage.tsx  SearchPage.css  SearchPage.tsx
src/pages/AnimeInfoPage/: index.tsx
src/pages/Home/: index.tsx
src/pages/Search/: index.tsx  style.css
tauri-plugin-tauri-plugin-sqlite/: Cargo.toml  README.md
tauri-plugin-tauri-plugin-sqlite/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-tauri-plugin-sqlite/src/: lib.rs
(+3 files in other folders)
